--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
 
     <body class="container-fluid pt-3">
-        <div class="sub-container">
+
+        <center>
             <div class="m-container col-sm-6 col-md-5 col-lg-3 m-auto mt-3">
                 <div class="ti">
                     <h3>RoboCalc</h3>
@@ -60,11 +61,9 @@
                         <button class="btn btn-lg btn-col-3">EXP</button>
                         <button style="margin-left: 2%;" onclick="calc()" class="fkeys-e btn btn-lg col-2">=</button>
                     </div>
-
-
-
                 </div>
-            </div>
+        </center>
+
         </div>
 
 
