btn layout in progress

--- a/index.html
+++ b/index.html
@@ -18,12 +18,41 @@
                     <input type="text" class="answer" placeholder="robotron">
                 </div>
             </div>
-        </div>
-        <div class="button-div">
-            <div class="function-keys">
-
+            <div class="button-div">
+                <div class="function-keys">
+                    <button onclick="cls()" class=" ">AC</button>
+                    <button onclick="backSpace()" class=" ">DEL</button>
+                    <button onclick="btnClick('%')" class=" ">%</button>
+                    <button onclick="btnClick('/')" class="">/</button>
+                </div>
+                <div class="function-keys">
+                    <button onclick="cls()" class=" ">AC</button>
+                    <button onclick="backSpace()" class=" ">DEL</button>
+                    <button onclick="btnClick('%')" class=" ">%</button>
+                    <button onclick="btnClick('/')" class="">/</button>
+                </div>
+                <div class="function-keys">
+                    <button onclick="cls()" class=" ">AC</button>
+                    <button onclick="backSpace()" class=" ">DEL</button>
+                    <button onclick="btnClick('%')" class=" ">%</button>
+                    <button onclick="btnClick('/')" class="">/</button>
+                </div>
+                <div class="function-keys">
+                    <button onclick="cls()" class=" ">AC</button>
+                    <button onclick="backSpace()" class=" ">DEL</button>
+                    <button onclick="btnClick('%')" class=" ">%</button>
+                    <button onclick="btnClick('/')" class="">/</button>
+                </div>
+                <div class="function-keys">
+                    <button onclick="cls()" class=" ">AC</button>
+                    <button onclick="backSpace()" class=" ">DEL</button>
+                    <button onclick="btnClick('%')" class=" ">%</button>
+                    <button onclick="btnClick('/')" class="">/</button>
+                </div>
             </div>
-        </div>
+
+
+
     </body>
 
 </html>
