--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="display-container">
             <div class="contain-all">
                 <div class="display-exp">
-                    <input type="text" class="expression" placeholder="robotron">
+                    <input type="text" class="expression" placeholder="robotron" disabled>
 
                     <div class="display-ans">
                         <input type="text" class="answer" placeholder="robotron" disabled>
