--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="display-container">
             <div class="contain-all">
                 <div class="display-exp">
-                    <input type="text" class="expression" placeholder="robotron" disabled>
+                    <input type="text" id="expressionDisp" class="expression" disabled>
 
                     <div class="display-ans">
-                        <input type="text" class="answer" placeholder="robotron" disabled>
+                        <input type="text" id="answerDisp" class="answer" disabled>
 
                     </div>
                 </div>
@@ -61,7 +61,7 @@
             </div>
 
 
-
+            <script src="index.js"></script>
     </body>
 
 </html>
