--- a/index.html
+++ b/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <title>Robocalc</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Robocalc</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+</head>
 
-    <body>
-        <div class="display-container">
-            <div class="contain-all">
-                <div class="display-exp">
-                    <input type="text" id="expressionDisp" class="expression" disabled>
+<body>
+    <div class="display-container">
+        <div class="contain-all">
+            <div class="display-exp">
+                <input type="text" id="expressionDisp" class="expression" disabled>
 
-                    <div class="display-ans">
-                        <input type="text" id="answerDisp" class="answer" disabled>
+                <div class="display-ans">
+                    <input type="text" id="answerDisp" class="answer" disabled>
 
-                    </div>
-                </div>
-                <div class="button-div">
-                    <div class="function-keys">
-                        <button onclick="cls()">AC</button>
-                        <button onclick="backSpace()">DEL</button>
-                        <button onclick="btnClick('%')">x²</button>
-                        <button onclick="btnClick('/')">÷</button>
-                    </div>
-                    <div class="math-functions">
-                        <button onclick="sfnClick()">sin</button>
-                        <button onclick="fnClick('')">cos</button>
-                        <button onclick="fnClick('')">tan</button>
-                        <button onclick="fnClick('log')">log</button>
-                    </div>
-                    <div class="digits">
-                        <button onclick="btnClick('7')">7</button>
-                        <button onclick="btnClick('8')">8</button>
-                        <button onclick="btnClick('9')">9</button>
-                        <button onclick="btnClick('*')">X</button>
-                    </div>
-                    <div class="digits">
-                        <button onclick="btnClick('4')">4</button>
-                        <button onclick="btnClick('5')">5</button>
-                        <button onclick="btnClick('6')">6</button>
-                        <button onclick="btnClick('-')">-</button>
-                    </div>
-                    <div class="digits">
-                        <button onclick="btnClick('1')">1</button>
-                        <button onclick="btnClick('2')">2</button>
-                        <button onclick="btnClick('3')">3</button>
-                        <button onclick="btnClick('+')">+</button>
-                    </div>
-                    <div class="special-keys">
-                        <button onclick="btnClick(0)">0</button>
-                        <button onclick="btnClick('.')" class="decimal">.</button>
-                        <button>EXP</button>
-                        <button onclick="calc()">=</button>
-                    </div>
                 </div>
             </div>
+            <div class="button-div">
+                <div class="function-keys">
+                    <button onclick="cls()">AC</button>
+                    <button onclick="backSpace()">DEL</button>
+                    <button onclick="btnClick('%')">x²</button>
+                    <button onclick="btnClick('/')">÷</button>
+                </div>
+                <div class="math-functions">
+                    <button onclick="sfnClick()">sin</button>
+                    <button onclick="fnClick('')">cos</button>
+                    <button onclick="fnClick('')">tan</button>
+                    <button onclick="fnClick('log')">log</button>
+                </div>
+                <div class="digits">
+                    <button onclick="btnClick('7')">7</button>
+                    <button onclick="btnClick('8')">8</button>
+                    <button onclick="btnClick('9')">9</button>
+                    <button onclick="btnClick('*')">X</button>
+                </div>
+                <div class="digits">
+                    <button onclick="btnClick('4')">4</button>
+                    <button onclick="btnClick('5')">5</button>
+                    <button onclick="btnClick('6')">6</button>
+                    <button onclick="btnClick('-')">-</button>
+                </div>
+                <div class="digits">
+                    <button onclick="btnClick('1')">1</button>
+                    <button onclick="btnClick('2')">2</button>
+                    <button onclick="btnClick('3')">3</button>
+                    <button onclick="btnClick('+')">+</button>
+                </div>
+                <div class="special-keys">
+                    <button onclick="btnClick(0)">0</button>
+                    <button onclick="btnClick('.')" class="decimal">.</button>
+                    <button>EXP</button>
+                    <button onclick="calc()">=</button>
+                </div>
+            </div>
+        </div>
 
 
-            <script src="index.js"></script>
-    </body>
+        <script src="index.js"></script>
+</body>
 
 </html>
